<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ForgetPassword">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_back_arrow" />


    <TextView
        android:id="@+id/textViewrReset"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/backButton"
        android:layout_marginBottom="298dp"
        android:textStyle="bold"

        android:layout_toEndOf="@id/backButton"
        android:text="@string/reset_password"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textReset"
        android:layout_width="328dp"
        android:layout_height="85dp"
        android:layout_alignTop="@id/backButton"
        android:layout_alignEnd="@+id/resetButton"
        android:layout_marginTop="191dp"

        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="298dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/text_reset"
        android:textSize="19sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/LoginTextInputInnerFieldStyle"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_reset_password"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/green"
        android:text="@string/reset_password" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>
