<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HitungDaya">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/textViewrReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/backButton"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:text="@string/hitung_daya"
        android:textSize="17sp"
        android:layout_toEndOf="@id/backButton" />

    <TextView
        android:id="@+id/defaultTextkonsumsi"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="83dp"
        android:text="@string/masukkan_daya_listrik_kwh"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDayaListrik"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewrReset"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDayaListrik"
            style="@style/LoginTextInputInnerFieldStyle"
            app:boxStrokeColor="@color/green"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/defaultTextkwh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:text="@string/harga_1_kwh_listrik_rp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTarifKwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_below="@id/textInputLayoutDayaListrik"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTarifKwh"
            android:layout_width="match_parent"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/defaultTextminggu"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="390dp"
        android:text="@string/berapa_jam_perhari"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDurasi"
        android:layout_width="match_parent"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutTarifKwh"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDurasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputInnerFieldStyle"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/tarifListrikSpinner"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_below="@id/textInputLayoutDurasi"
        android:layout_centerHorizontal="true"
        style="@style/LoginTextInputInnerFieldStyle"/>

    <Button
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutDurasi"
        android:layout_marginStart="4dp"
        android:layout_marginTop="132dp"
        android:onClick="hitungBiaya"
        android:text="Hitung Biaya" />

    <TextView
        android:id="@+id/hasilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:text="@string/hasil_perhitungan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/textInputLayoutDurasi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hasilTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Simpan"
        android:onClick="simpanHasil" />

</RelativeLayout>





